# performant

./: README.md  pyproject.toml  setup.cfg
src/formant-tools/: tools.py
src/performant/: tools.py
src/performant_babe269.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/performant_live/: train_tacotron2.py
