[metadata]
name = Formant-Tools-babe269
version = 0.0.1
author = Binu Abeysinghe
author_email = babe269@aucklanduni.ac.nz
description = A Package for extracting and visualising formants from speech signals and Tacotron2 models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/babe269/Formant-Tools
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src