[metadata]
name = performant-babe269
version = 0.0.1
author = Binu Abeysinghe
author_email = babe269@aucklanduni.ac.nz
description = A toolset for easy formant extraction and visualization from wav files and TTS models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/babe269/formant-tools
project_urls =
    Bug Tracker = https://github.com/babe269/formant-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src